Fixes: NB#234708 - Extra padding in CommonEditorInputFieldPanel style
RevBy: TrustMe

--- a/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonsheetstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/commonlayouts/commonsheetstyle.css
@@ -163,7 +163,6 @@
     margin-bottom:     0;
     margin-left:       0;
     margin-right:      0;
-    padding-top: 8;
 }
 
 #CommonEditorInputFieldPanel:pressed {
